--- a/viewClassListAdmin.html
+++ b/viewClassListAdmin.html
@@ -131,6 +131,8 @@ input[type=text], input[type=password] {
 <form class="formbg" name="resetForm" method="post">
     <table  border=1px style="width:70%" align="center">
         <h2><center><b>SENARAI KELAS</b></center></h2>
+        <p align="right"><a href=""><input type="button" style="border:1px solid; margin-right:120px; background:#E29607; height:40px; width:105px; border-radius:3px; color:#FFF;" value="+ KELAS"></a></p>
+    </td>
               <form action="" method="POST">
         <center>
        <table  border=1 style="width:80%" align="center">
