--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>ONE</title>
 
 </head>
@@ -133,11 +134,14 @@ hr {
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
-img {vertical-align: middle;}
+img {
+  vertical-align: middle;
+}
 
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
+  height: 80%;
   position: relative;
   margin: auto;
 }
@@ -199,8 +203,90 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
+
+
+.split {
+  height: 100%;
+  width: 50%;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.left {
+  float:left;
+  background-color: white;
+}
+
+.right {
+  float: right;
+  background-color: white;
+}
+
+.centered {
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  margin-right: 15%;
+  margin-left: 15%;
+}
+
+.icon-bar {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
+}
+
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.facebook {
+  background: #3B5998;
+  color: white;
+}
+.linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.youtube {
+  background: #bb0000;
+  color: white;
+}
+
+.twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.google {
+  background: #dd4b39;
+  color: white;
+}
 </style>
 </head>
+
+<div class="icon-bar">
+  <p>Temui KGSM</p>
+  <a href="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a> 
+  <a href="https://twitter.com/" class="twitter"><i class="fa fa-twitter"></i></a> 
+  <a href="https://www.google.com/" class="google"><i class="fa fa-google"></i></a> 
+  <a href="https://www.linkedin.com/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+  <a href="https://www.youtube.com/" class="youtube"><i class="fa fa-youtube"></i></a> 
+</div>
     <div class="topheader"><center><img src="walogo.png"></center><center><h1>KURSUS GERAK SENI MELAYU (KGSM)</h1></center></div>
       <body bgcolor="#FBFBFB">
         <div class="container">
@@ -218,15 +304,15 @@ img {vertical-align: middle;}
      <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <img src="pic1.jpg" style="width:100%">
+  <center><img src="pic6.jpg" style="width:800px;height:300px;"></center>
 </div>
 
 <div class="mySlides fade">
-  <img src="pic1.jpg" style="width:100%">
+    <center><img src="pic5.jpg" style="width:800px;height:300px;"></center>
 </div>
 
 <div class="mySlides fade">
-  <img src="pic1.jpg" style="width:100%">
+    <center><img src="pic7.jpg" style="width:800px;height:300px;"></center>
 </div>
 
 </div>
@@ -240,7 +326,33 @@ img {vertical-align: middle;}
 
     </div>
 </div>
+ <hr>
+ <center><img src="pic8.jpg" style="margin-bottom: 100px;"></center>
 
+<div class="split left">
+  <div class="centered">
+    <h2>TENTANG KAMI</h2>
+    <p>Kursus Gerak Seni Melayu atau ‘KGSM‘ merupakan sebuah program Silat & Budaya Melayu yang disusun rancang berdasarkan falsafah memperluaskan dan memperdalamkan skop pengalaman dan keilmuan dalam bidang seni silat dan budaya Melayu kepada pelbagai peringkat di sekolah, IPT, Pertubuhan mahupun Syarikat Korporat .
+
+Program ini bukan sahaja bertumpu dalam hal-hal seni silat dan budaya semata-mata akan tetapi ia jua akan disokong pelbagai aktiviti yang mampu mengintegrasikan perhubungan di antara penuntut dengan masyarakat serta dengan alam sekeliling. Melalui penglibatan dalam program ini mereka bukan sahaja mendapat pendedahan dalam bidang seni dan budaya bahkan juga cemerlang dalam pendidikan, budaya kerja yang lebih baik, berketrampilan serta mesra dengan masyarakat serta alam sekeliling. Maka pendedahan inilah sewajarnya dipupuk dan ditanam dari peringkat usia remaja malah juga pada usia dewasa agar apa yang akan diterima kelak akan mempertingkatkan kesedaran terhadap nilai-nilai agama, moral, sejarah, ketahanan dan disiplin diri.
+
+Pada kesedaran inilah WarisAlam ingin berkongsi pengalaman yang baik dalam KGSM. KGSM ini merupakan pengenalan awal : asas seni Melayu, dibentuk dalam beberapa pakej agar bersesuaian dengan kehendak pemintaan semasa.
+
+ </p>
+  </div>
+</div>
+<div class="split right">
+  <div class="centered">
+<br><br><br>
+<iframe src="http://free.timeanddate.com/clock/i72k8onu/n122/tlmy40/fn13/fs18/fc09f/tc000/ftb/bas2/bat1/bacfff/pa8/tt0/tw0/td1/th2/ts1/ta1/tb4" frameborder="0" width="184" height="62"></iframe>
+<br><br><br>
+<iframe src="http://free.timeanddate.com/clock/i72k8onu/n122/szw160/szh160/hoc000/hbw2/hfceee/cf100/hncccc/fdi76/mqc000/mql10/mqw4/mqd98/mhc000/mhl10/mhw4/mhd98/mmc000/mml10/mmw1/mmd98" frameborder="0" width="160" height="160"></iframe>
+
+
+<br><br><br>
+
+  </div>
+</div>
 
 <script>
 var slideIndex = 0;
